# dingtalk-Approve

./: .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.json
config/: config.example  config.yaml
src/: __init__.py  cache.py  config.py  config_watcher.py  spreadsheet_client.py  stream_client.py
tests/: test_actions.py  test_add_record.py  test_add_simple.py  test_background_reload.py  test_config_reload.py  test_dingtalk_api.py  test_failed_events.py  test_full_reload.py  test_list_sheets.py  test_parallel_actions.py  test_user_dept_api.py  test_watchfiles.py
